[package]
name = "cavestory"
version = "0.1.0"
authors = ["marc"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
specs = { version = "0.16.1", features = ["specs-derive", "shred-derive"] }
specs-derive = "0.4.1"

[dependencies.sdl2]
version = "0.34"
default-features = false
features = ["image"]